--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   qr_flutter: ^4.0.0
   font_awesome_flutter: ^10.4.0
   image_picker: ^0.8.4+4
-  shared_preferences: ^2.0.9
+  qr_code_scanner: ^1.0.0
   
   flutter:
     sdk: flutter
