--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,13 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   image_picker: ^0.8.4+4
   qr_code_scanner: ^1.0.0
-  
+  provider: ^6.0.3
+  flutter_animate: ^3.0.0
+  animated_text_kit: ^4.2.2
+  flutter_typeahead: ^4.0.0
+  modal_bottom_sheet: ^2.1.0
+  responsive_framework: ^0.1.0
+  flutter_svg: ^2.0.10+1
   flutter:
     sdk: flutter
 
@@ -28,3 +34,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+  - assets/pictures/
