--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,17 @@ dependencies:
   qr_flutter: ^4.0.0
   font_awesome_flutter: ^10.4.0
   image_picker: ^0.8.4+4
-  shared_preferences: ^2.0.9
-  
+  qr_code_scanner: ^1.0.0
+  provider: ^6.0.3
+  flutter_animate: ^3.0.0
+  animated_text_kit: ^4.2.2
+  flutter_typeahead: ^4.0.0
+  modal_bottom_sheet: ^2.1.0
+  responsive_framework: ^0.1.0
+  flutter_svg: ^2.0.10+1
   flutter:
     sdk: flutter
-
+  http: ^1.2.2
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
@@ -28,3 +34,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+  - assets/pictures/
