--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=backend
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/visiting_card_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/visiting_card_db
 spring.datasource.username=postgres
-spring.datasource.password=5174420
+spring.datasource.password=123
 
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
