--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,17 @@
+buildscript {
+    repositories {
+        google()  // Это нужно для загрузки плагинов Android
+        mavenCentral()  // Репозиторий для других зависимостей
+    }
+    dependencies {
+        // Указываем нужную версию Android Gradle Plugin
+        classpath 'com.android.tools.build:gradle:8.1.0'
+
+        // Указываем версию Kotlin Plugin (если используете Kotlin)
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.10'
+    }
+}
+
 allprojects {
     repositories {
         google()
