--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,14 +12,14 @@ dependencies:
   url_launcher: ^6.0.20
   qr_flutter: ^4.0.0
   font_awesome_flutter: ^10.4.0
-  image_picker: ^0.8.4+4
+  image_picker: ^1.1.2
   qr_code_scanner: ^1.0.0
   provider: ^6.0.3
-  flutter_animate: ^3.0.0
+  flutter_animate: ^4.5.2
   animated_text_kit: ^4.2.2
-  flutter_typeahead: ^4.0.0
-  modal_bottom_sheet: ^2.1.0
-  responsive_framework: ^0.1.0
+  flutter_typeahead: ^5.2.0
+  modal_bottom_sheet: ^3.0.0
+  responsive_framework: ^1.5.1
   flutter_svg: ^2.0.10+1
   flutter:
     sdk: flutter
@@ -30,7 +30,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 flutter:
   uses-material-design: true
